<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="accountId" type="id" />
    <item name="accountIdLabel" type="id" />
    <item name="branchId" type="id" />
    <item name="branchIdLabel" type="id" />
    <item name="bankAccountId" type="id" />
    <item name="bankAccountIdLabel" type="id" />
    <item name="bankAccountPurpose" type="id" />
    <item name="bankAccountPurposeLabel" type="id" />
    <item name="wireInstructions" type="id"/>
    <item name="wireInstructionsLabel" type="id"/>
    <item name="intermediaryBankId" type="id"/>
    <item name="intermediaryBankIdLabel" type="id"/>
    <item name="intermediaryBankAccountId" type="id"/>
    <item name="intermediaryBankAccountIdLabel" type="id"/>
    <item name="cardNumber" type="id" />
    <item name="cardNumberLabel" type="id" />
    <item name="dateOfExpiry" type="id" />
    <item name="dateOfExpiryLabel" type="id" />
    <item name="cvv" type="id" />
    <item name="cvvLabel" type="id" />
    <item name="email" type="id"/>
    <item name="emailLabel" type="id"/>
    <item name="bankAccountRelationship" type="id"/>
    <item name="bankAccountRelationshipLabel" type="id"/>
    <item name="bankId" type="id"/>
...
