...
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/grid_padding_left"
    android:paddingTop="@dimen/grid_padding_top"
    android:paddingEnd="@dimen/grid_padding_right">

    <TextView
        android:id="@+id/select_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/grid_padding_bottom"
        android:paddingStart="@dimen/item_vertical_padding"
        android:paddingEnd="@dimen/item_vertical_padding"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
...
